--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             myCallback("Error: " + req.status);
           }
         };
-        req.open("GET", "Assets\img_car.jpg");
+        req.open("GET", "img.html");
         req.send();
       }
 
